force-app/main/default/objects/Invoice__c/fields/Total_Pick_Pack_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Pick_Pack_Fee__c</fullName>
    <label>Total Pick &amp; Pack Fee</label>
    <summarizedField>Invoice_Line__c.Pick_Pack_Fee__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>