force-app/main/default/objects/Invoice__c/fields/Total_Product_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Payments_Received__c</fullName>
    <description>Calculates total payment amount of PRODUCT record type of related receive payment object.</description>
    <label>Total Product Payments Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>