force-app/main/default/objects/Invoice__c/fields/Total_QA_Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_QA_Review_Fee__c</fullName>
    <label>Total QA Review Fee</label>
    <summarizedField>Invoice_Line__c.QA_Review_Fee__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>