force-app/main/default/objects/Invoice__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Invoice_Line__c.Total_Weight_lbs__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>