force-app/main/default/objects/Invoice__c/fields/TotalInvoiceAmountLateFee__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmountLateFee__c</fullName>
    <label>Total Invoice Amount (Incl Late Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>