force-app/main/default/objects/Invoice__c/recordTypes/Credit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Credit_Memo</fullName>
    <active>true</active>
    <description>Used for Credit Memo Only - DO NOT Use for Refunds</description>
    <label>Credit Memo</label>
</RecordType>