force-app/main/default/objects/Invoice__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Use for all Product and Services</description>
    <label>Product</label>
</RecordType>