force-app/main/default/objects/Invoice__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>Used for Packaging and or Services</description>
    <label>Service</label>
</RecordType>