force-app/main/default/objects/Invoice__c/recordTypes/Tax.recordType-meta.xml
<RecordType>
    <fullName>Tax</fullName>
    <active>true</active>
    <description>Used for Cultivation Tax Invoices</description>
    <label>Tax</label>
</RecordType>