force-app/main/default/objects/Invoice__c/listViews/WOVN_Transfer.listView-meta.xml
<ListView>
    <fullName>WOVN_Transfer</fullName>
    <columns>AR_Status__c</columns>
    <columns>NAME</columns>
    <columns>Brand_Quote__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Ship_Confirmation_Date__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Collections_Status__c</columns>
    <columns>Invoice_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Transfer</value>
    </filters>
    <filters>
        <field>AR_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Submitted,Approved,Shipped</value>
    </filters>
    <label>WOVN Transfer</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>