force-app/main/default/objects/Invoice__c/listViews/X1_Product_Invoices_Pending_Ship.listView-meta.xml
<ListView>
    <fullName>X1_Product_Invoices_Pending_Ship</fullName>
    <columns>AR_Status__c</columns>
    <columns>NAME</columns>
    <columns>Brand_Quote__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Ship_Confirmation_Date__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Collections_Status__c</columns>
    <columns>Invoice_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Product</value>
    </filters>
    <filters>
        <field>AR_Status__c</field>
        <operation>equals</operation>
        <value>Shipped</value>
    </filters>
    <label>1. Product Pending Ship</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>