force-app/main/default/objects/Invoice__c/listViews/X2_Created_Today.listView-meta.xml
<ListView>
    <fullName>X2_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>FG_Record_Type__c</columns>
    <columns>AR_Status__c</columns>
    <columns>Brand_Quote__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Ship_Confirmation_Date__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Collections_Status__c</columns>
    <columns>Invoice_Balance__c</columns>
    <columns>Total_Line_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>2. Created Today</label>
</ListView>